--- a/index.html
+++ b/index.html
@@ -7,6 +7,80 @@
     <title>3 rd july 2021</title>
 </head>
 <body>
+<h2>ASSIGNMENT 2</h2>
+<a href="tel:7595905404">Call Me!</a>&nbsp;&nbsp;
+<a href="about.html">Move To About Page</a>
+<h4>Grocery list</h4>
+<ul>
+    <li>Bread</li>
+    <li>Eggs</li>
+    <li>Milk</li>
+    <li>Coffee</li>
+</ul>
+<br/><br/>
+<ul>
+    <li>Fruit</li>
+         <ul><li>Bananas</li>
+         <li>Apples</li>
+               <ul>
+                   <li>GREEN</li>
+                    <li>RED</li>
+                </ul>
+                </ul>
+    <li>Vegetables</li>
+    <li>Meat</li>
+</ul>
+
+<br/><br/>
+<table border="1">
+<thead>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+<tbody>
+    <tr>
+        <td>Alfreds Futterkiste</td>
+        <td>Maria Anders</td>
+        <td>Germany</td>
+    </tr>
+    <tr><td>Centro commercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td></tr>
+    <tr>
+        <td>Ernst Handel</td>
+        <td>Roland Mendel</td>
+        <td>Austria</td>
+    </tr>
+    <tr>
+        <td>Island Trading</td>
+        <td>Helen Bennett</td>
+        <td>UK</td>
+    </tr>
+    <tr>
+        <td>Laughing Bacchus Winecellars</td>
+        <td>yoshi Tannamuri</td>
+        <td>Canada</td>
+    </tr>
+    <tr>
+        <td>Magazzini Alimentari Riuniti</td>
+        <td>Giovanni Rovelli</td>
+        <td>Italy</td>
+    </tr>
+</tbody>    
+</thead>
+
+</table>
+
+
+
+
+
+
+
+
+
+
+    <h2>ASSIGNMENT 1</h2>
     
     <h3>TASK&nbsp;&nbsp;--- &nbsp;&nbsp;1</h3>
     <a href="mailto:krishnendupatra627@gmail.com" target="_blank">Mail</a>
@@ -38,6 +112,6 @@
 <img src="./img1.jpg" width="400px"/>&nbsp;&nbsp;
 <img src ="https://images.pexels.com/photos/5058832/pexels-photo-5058832.png?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="300px"/>
 
-
+                         
 </body>
 </html>
